# CCOS

./: .gitignore  .mcp.json  CCOS_v0.3_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  ROADMAP.md
.github/workflows/: audit.yml  ci.yml
benches/: delta_bench.rs
crates/ccos-memory-runtime/: Cargo.toml  INTEGRATION.md  README.md
crates/ccos-memory-runtime/examples/: slha_backend.rs
crates/ccos-memory-runtime/src/: lib.rs  telemetry.rs  traits.rs
crates/ccos-memory-runtime/src/backend/: mod.rs  slha_adapter.rs
crates/ccos-memory-runtime/tests/: test_slha_adapter.rs
docs/: ARCHITECTURE.md  BIBLIOGRAPHY.md  COMPARISON_vs_rag.md  COMPETITIVE.md  DEPLOYMENT.md  DESIGN_cold_entry_count.md  DESIGN_focus_shield.md  DESIGN_recall_budget.md  DESIGN_symbol_granularity.md  FIELD_CAMPAIGN.md  FIELD_CAMPAIGN_H.md  FIELD_TEST.md  MEASUREMENT_ast.md  MEASUREMENT_batch_resolution.md  MEASUREMENT_beir.md  MEASUREMENT_call_crux.md  MEASUREMENT_centrality.md  MEASUREMENT_cold_ram.md  MEASUREMENT_conflict_of_origins.md  MEASUREMENT_contradiction_crux.md  MEASUREMENT_data_flow_crux.md  MEASUREMENT_decay_crux.md  MEASUREMENT_eigencentrality.md  MEASUREMENT_latency.md  MEASUREMENT_method_crux.md  MEASUREMENT_node_lifecycle.md  MEASUREMENT_propagation_crux.md  MEASUREMENT_pure_retrieval.md  MEASUREMENT_rag_crux.md  MEASUREMENT_recall.md  MEASUREMENT_resolution_coverage.md  MEASUREMENT_scirust_fusion.md  MEASUREMENT_spectral_regions.md  MEASUREMENT_sufficient_condition.md  MEASUREMENT_temporal_tensor.md  MEMORY_INTERFACE.md  NEURAL_EMBED.md  PAPER.md  PERFORMANCE.md  PITCH.md  (+7 more)
docs/paper/: README.md  ccos_regions.ar.md  ccos_regions.ar.tex  ccos_regions.es.md  ccos_regions.es.tex  ccos_regions.fr.md  ccos_regions.fr.tex  ccos_regions.ko.md  ccos_regions.ko.tex  ccos_regions.md  ccos_regions.tex  ccos_regions.zh.md  ccos_regions.zh.tex
editors/: README.md
editors/nvim/lua/: ccos_focus.lua
editors/vscode/: package.json
editors/vscode/src/: extension.ts  render.test.ts  render.ts
examples/: beir_eval.rs  bench_compress.rs  call_crux.rs  centrality_retention.rs  cold_count.rs  cold_ram.rs  conflict_of_origins.rs  contradiction_crux.rs  data_flow_crux.rs  decay_crux.rs  eigencentrality_retention.rs  embed_ranking.rs  flagship.rs  identifier_recall.rs  ingest_profile.rs  injection_redteam.rs  license_sign.rs  license_sign_pq.rs  lsa_rerank.rs  method_crux.rs  neural_vs_lsa.rs  node_lifecycle.rs  octasoma_semantic.rs  parse_accuracy.rs  pillar_ranking.rs  propagation_crux.rs  pure_retrieval_vs_rag.rs  rag_crux.rs  recall_eval.rs  recall_latency.rs  replay_batch_crux.rs  resolution_coverage.rs  retrieval_improvement.rs  scirust_vs_rag_crux.rs  semantic_retrieval_crux.rs  spectral_regions.rs  sufficient_condition.rs  sync_crux.rs  temporal_tensor_crux.rs  time_travel.rs  (+1 more)
scripts/: agent_demo.py  ccos_campaign_probe.py  ccos_context_value.py  ccos_grade.py  ccos_resolution_context.py  ccos_self_feed.py  chaos_fuzz.sh  chaos_multi_day.sh  fleet_collect.sh  graph_fuzzing.sh  inject_faults.sh  install.sh  jetson_repro_env.sh  memory_pressure_test.sh  phase4_eval.py  region_benchmark.sh  replay_consistency_check.sh  replay_validator.sh  run_ccos_test.sh  run_full_suite.sh  stress_1000_cycles.sh  stress_100k_cycles.sh
scripts/causal_validation/: README.md  validate.py
src/: adversarial.rs  agent_session.rs  agents.rs  benchmark.rs  cold_index.rs  commands_demo.rs  commands_runtime.rs  compressor.rs  conformal.rs  consensus.rs  context_policy.rs  context_region.rs  distributed_event_log.rs  drift.rs  dtw.rs  embeddings.rs  eval.rs  event_log.rs  eviction_policy.rs  experiment.rs  external_memory.rs  extractor.rs  guard.rs  hashing_tokenizer.rs  incremental.rs  injection_classifier.rs  lib.rs  license.rs  lingam.rs  llm.rs  lsa.rs  lzss.rs  main.rs  mcp.rs  memory.rs  neural_embed.rs  octa_index.rs  parser.rs  persist.rs  persistence.rs  (+13 more)
src/brain/: clustering.rs  gc.rs  mod.rs
src/core/: mod.rs  search.rs  simd.rs  types.rs
src/core/metrics/: cosine.rs  mahalanobis.rs  mod.rs
src/ffi/: bindings.rs
src/storage/: lsm.rs  memtable.rs  mod.rs  wal.rs
tests/: benchmark.rs  ccos_adversarial_suite.rs  ccos_stress_replay.rs  ccos_system_stress.rs  cli.rs  cold_tier_hardening.proptest-regressions  cold_tier_hardening.rs  context_region_tests.rs  e2e_integration.rs  event_graph_consistency.rs  graph_invariants.rs  integration_ccos.rs  llm_adversarial_test.rs  long_term_stability.rs  multi_agent.rs  persistence.rs  persistence_tests.rs  property_invariants.rs  replay_equivalence_property.rs  runtime_scheduler.rs  simd_benchmarks.rs  snapshot_differential.rs  snapshot_roundtrip_property.proptest-regressions  snapshot_roundtrip_property.rs  workspace_scanner.rs
