[package]
name = "ccos"
version = "0.3.0"
edition = "2021"
license = "LicenseRef-CheckupAuto-Dual"

[dependencies]
# Async runtime + HTTP client are only needed by the LLM / eval / workspace
# modules (Ollama HTTP client, async file scanning). They are gated behind the
# `llm` feature so a consumer of the sync core (e.g. `ccos::event_log`) pulls
# neither the async runtime nor TLS. See `[features]` below.
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# Optional real-AST parser (ROADMAP P0.1). With the `syn-parser` feature, the
# `parser` module uses `syn` for accurate parsing (nested-module bodies,
# multi-line signatures, grouped `use`, impl methods); without it the
# zero-dependency line-based heuristic parser is used. `proc-macro2`'s
# span-locations supplies real line numbers. Both crates are already present in
# the dependency tree transitively, so enabling this pulls no new download.
syn = { version = "2", features = ["full", "visit"], optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }

# Optional drop-in global allocator for bare-metal benchmarking. CCOS is not
# allocation-bound at its scale (the kernel is <1% of an agent loop dominated by
# LLM inference), so this is an opt-in knob to *measure*, not a default win. See
# docs/PERFORMANCE.md.
mimalloc = { version = "0.1", optional = true }

# Optional offline license verifier (ROADMAP — Pro gating). Behind the `license`
# feature so the default build pulls in **no cryptography**: a license is a locally
# signed token verified with a baked-in ed25519 **public** key — no network, no
# telemetry, nothing leaves the host. The matching private key is the vendor's and
# never lives in this tree. See `src/license.rs`.
ed25519-dalek = { version = "2", optional = true }
# Optional **post-quantum** offline license verifier (NIST FIPS 205 / SLH-DSA,
# formerly SPHINCS+) behind the orthogonal `license-pq` feature. A second, fully
# independent verifier: a `slhdsa.`-tagged token is verified with a baked-in
# SLH-DSA **public** key. Pure Rust (`#![forbid(unsafe_code)]`, `zeroize`-backed)
# but **not independently audited** (see docs/DEPLOYMENT.md §4b). We use the
# `lattice-slh-dsa` crate rather than RustCrypto's `slh-dsa`: the latter pins a
# pre-release `signature` crate that cannot coexist with `ed25519-dalek` in one
# build (which would break `--all-features`); `lattice-slh-dsa` depends only on
# stable `sha2`/`sha3`/`subtle`/`zeroize`, so `license` and `license-pq` compose.
lattice-slh-dsa = { version = "0.3", default-features = false, optional = true }

# Optional external retrieval backend (ROADMAP — "better retrieval"). Behind the
# `scirust-retrieval` feature so the **default build pulls neither the crate nor
# any new dependency** and stays byte-identical. We depend on its *pure core*
# (`default-features = false`): no `scirust-core` autodiff/nn stack — only
# `serde`/`sha2`, already in our tree — exposing an exact, full-precision
# `DenseIndex` plus a bring-your-own-embeddings `Encoder` trait. CCOS feeds it its
# own deterministic TF-IDF vectors (`src/scirust_bridge.rs`), so the replay
# invariant holds. Used by the `scirust-dense` eval strategy to weigh a
# full-precision dense index against CCOS's INT4-quantized `nearest_k`.
scirust-retrieval = { git = "https://github.com/CHECKUPAUTO/scirust", default-features = false, optional = true }

[features]
# Default = the **sync core** (causal memory, hash-chained event log, recall) plus
# the real `syn` **AST parser**, now the default ingestion path: it is 36.5% more
# accurate than the line heuristic on real code (two-thirds vs full import recall —
# see docs/MEASUREMENT_ast.md), and `syn`/`proc-macro2` are already in the tree via
# serde's derive, so defaulting to it pulls **no new dependency**. Still no async
# runtime and no TLS — a consumer of `ccos::memory` / `ccos::event_log` pulls neither
# tokio nor reqwest. Opt out with `--no-default-features` for the zero-extra-dependency
# line-based heuristic (kept as the fallback for non-Rust / unparseable input).
default = ["syn-parser"]
# The LLM / eval / workspace modules and the `ccos` binary (which drives them).
llm = ["dep:tokio", "dep:reqwest"]
syn-parser = ["dep:syn", "dep:proc-macro2"]
mimalloc = ["dep:mimalloc"]
# Opt-in **learned** semantic embedder: distil the deterministic INT4 TF-IDF into
# a latent-semantic (LSA / truncated-SVD) projection learned from the corpus's own
# term co-occurrence. Zero new dependencies and fully deterministic (a fixed Jacobi
# sweep), so the replay invariant holds; the default build keeps raw TF-IDF, the
# measured baseline. See `src/lsa.rs` and ROADMAP "better retrieval — slice B".
learned-embed = []
# Offline **Pro license** verification: a locally signed (ed25519) token checked
# against a baked-in public key. Pulls in `ed25519-dalek`; the default build has no
# cryptography and runs in the free community tier. Nothing leaves the host.
license = ["dep:ed25519-dalek"]
# Offline **post-quantum** Pro license verification: a second, scheme-tagged
# (`slhdsa.`) token verified against a baked-in SLH-DSA (FIPS 205) public key.
# Orthogonal to `license` — a build may enable one, the other, or both (the
# `slhdsa.` prefix dispatches which verifier checks a given token). Pulls in
# `slh-dsa`; still no cryptography in the default build.
license-pq = ["dep:lattice-slh-dsa"]
# Opt-in external retrieval backend: pulls the pure core of the `scirust-retrieval`
# crate (no `scirust-core`, only `serde`/`sha2`) and wires it into the eval harness
# as the `scirust-dense` strategy — an exact, full-precision `DenseIndex` over CCOS's
# own TF-IDF embeddings. Off by default → the default build is byte-identical and pulls
# no new dependency. The eval strategy also needs `llm` (the harness lives there):
# `cargo run --features "llm,scirust-retrieval" -- eval`. See `src/scirust_bridge.rs`.
scirust-retrieval = ["dep:scirust-retrieval"]

[dev-dependencies]
proptest = "1"
criterion = "0.5"

# The CLI binary drives the async modules, so it requires the `llm` feature;
# `cargo build` (no features) builds only the sync library.
[[bin]]
name = "ccos"
path = "src/main.rs"
required-features = ["llm"]

[[bench]]
name = "delta_bench"
harness = false

# Vendor signing / keygen tool for offline licenses — requires the `license` feature
# (it needs the ed25519 signing primitives). Never ships in the default build.
[[example]]
name = "license_sign"
required-features = ["license"]

# Vendor signing / keygen tool for **post-quantum** (SLH-DSA / FIPS 205) offline
# licenses — requires the `license-pq` feature (it needs the SLH-DSA signing
# primitives). A separate example: cargo `required-features` is AND-only, so a
# single combined example would force both crypto features on whenever either
# vendor tool builds. Never ships in the default build.
[[example]]
name = "license_sign_pq"
required-features = ["license-pq"]
