[package]
name = "ccos-memory-runtime"
version = "0.1.0"
edition = "2021"
description = "Neutral cognitive-memory middleware: MemoryProvider trait + self-contained SLHAv2 tile backend. Zero dependencies (no scirust)."
license = "LicenseRef-CheckupAuto-Dual"

# Intentionally ZERO dependencies. The SLHAv2 tile is a 128-byte ABI; the adapter
# decodes it with its own minimal grouped-INT4 logic, so neither CCOS nor this
# crate ever depends on `scirust`. (Exact kernel parity / NF4 could later be an
# OPT-IN `scirust-kernel` feature — off by default — but it is not required.)
[dependencies]
